--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,20 +2,19 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "serve": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "back-end": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongodb": "^6.6.1",
-    "mongoose": "^8.3.4"
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
