--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "front-end": "file:",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
