--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2022",
-    "rootDir": "./",
-    "esModuleInterop": true,
-    "outDir": "./dist"
-  },
-  "include": ["src/**/*.ts"]
+    "target": "es6",
+    "outDir": "dist",
+    "rootDir": ".",
+    "sourceMap": true,
+    "strict": false
+  }
 }
