--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -67,6 +67,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: node-app
+        path: ./back-end
 
     - name: 'Deploy to Azure WebApp'
       id: deploy-to-webapp
