--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -43,6 +43,7 @@ jobs:
         cache-dependency-path: './back-end/package-lock.json'
 
     - name: npm install, build, and test
+      working-directory: ./back-end
       run: |
         npm install
         npm run build --if-present
