--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,8 @@ on:
 
 env:
   NODE_VERSION: '20.x'
-  AZURE_FUNCTIONAPP_NAME: 'finance-app-cne'  # Your Function App name from Azure
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: './back-end/dist'  # Path to function app project root
+  AZURE_FUNCTIONAPP_NAME: 'finance-app-cne'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './back-end/dist'  # deploy dist, not build in it
 
 permissions:
   contents: read
@@ -28,7 +28,7 @@ jobs:
     - name: 'Resolve Project Dependencies Using Npm'
       shell: pwsh
       run: |
-        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+        pushd './back-end'  
         npm install
         npm run build --if-present
         npm run test --if-present
