--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,11 @@ jobs:
           npm run test --if-present
           popd
 
+      - name: Show contents of build output
+        run: |
+          echo "Contents of ./back-end/dist:"
+          ls -R ./back-end/dist
+
       - name: "Run Azure Functions Action"
         uses: Azure/functions-action@v1
         id: fa
